    (Arun Suresh via kasha)

    HADOOP-11170. ZKDelegationTokenSecretManager fails to renewToken created by 
    a peer. (Arun Suresh and Gregory Chanan via kasha)

    HADOOP-11217. Disable SSLv3 in KMS. (Robert Kanter via kasha)

    HADOOP-11068. Match hadoop.auth cookie format to jetty output.
    (Gregory Chanan via cnauroth)

    HADOOP-11217. Disable SSLv3 in KMS. (Robert Kanter via kasha)

    HADOOP-11243. SSLFactory shouldn't allow SSLv3. (Wei Yan via kasha)

    HADOOP-11250. fix endmacro of set_find_shared_library_without_version in
    CMakeLists (Yi Liu via Colin P. McCabe)

    HADOOP-11221. IdentityHashStore assumes System.identityHashCode() is
    non-negative. (Jinghui Wang via szetszwo)

    HADOOP-11241. Fixed intermittent TestNMSimulator failure due to timing issue.
    (Varun Vasudev via zjshen)

    HADOOP-11265. Credential and Key Shell Commands not available on Windows.
    (Larry McCay via cnauroth)

    HADOOP-11280. TestWinUtils#testChmod fails after removal of
    NO_PROPAGATE_INHERIT_ACE. (cnauroth)

    HADOOP-11282. Skip NFS TestShellBasedIdMapping tests that are irrelevant on
    Windows. (cnauroth)

Release 2.5.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
  
  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11243. SSLFactory shouldn't allow SSLv3. (Wei Yan via kasha)

    HADOOP-11260. Patch up Jetty to disable SSLv3. (Mike Yoder via kasha)

Release 2.5.1 - 2014-09-05

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
  
    HADOOP-10956. Fix create-release script to include docs and necessary txt
    files. (kasha)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11001. Fix test-patch to work with the git repo. (kasha)

    HADOOP-11065. Rat check should exclude "**/build/**". (kasha)

Release 2.5.0 - 2014-08-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)
